--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "prerelease": "npm run build",
     "release": "release-it"
   },
+  "files": [
+    "dist/**/*",
+    "*.md",
+    "index.js",
+    "index.d.ts"
+  ],
   "peerDependencies": {
     "@nestjs/common": "^7.0.0 || ^8.0.0",
     "reflect-metadata": "^0.1.12",
@@ -29,6 +35,7 @@
     "@nestjs/core": "8.2.3",
     "@nestjs/platform-express": "8.2.3",
     "@nestjs/testing": "8.2.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/jest": "27.0.3",
     "@types/node": "16.11.12",
     "@typescript-eslint/eslint-plugin": "5.6.0",
@@ -36,27 +43,21 @@
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "7.0.4",
     "jest": "27.4.4",
     "lint-staged": "12.1.2",
     "prettier": "2.5.1",
+    "pretty-quick": "^3.1.2",
     "reflect-metadata": "0.1.13",
-    "release-it": "14.11.8",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
+    "semantic-release": "^18.0.1",
     "ts-jest": "27.1.1",
     "typescript": "4.5.3"
   },
   "lint-staged": {
-    "*.ts": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -c .commitlintrc.json -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
+    "**/*": "pretty-quick --staged"
   },
   "repository": {
     "type": "git",
