--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "description": "",
   "author": "",
   "license": "MIT",
+  "keywords": [
+    "nest",
+    "nestjs",
+    "hasher",
+    "bcrypt",
+    "argon"
+  ],
   "scripts": {
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "format": "prettier --write \"{lib,test}/**/*.ts\"",
     "lint": "eslint 'lib/**/*.ts' --fix",
+    "test": "jest --force-exit --runInBand",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "prepublish:npm": "npm run build",
     "publish:npm": "npm publish --access public",
     "prepublish:next": "npm run build",
@@ -39,7 +50,7 @@
     "@nestjs/platform-express": "8.2.3",
     "@nestjs/testing": "8.2.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "27.0.3",
+    "@types/jest": "^27.0.3",
     "@types/node": "16.11.12",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.6.0",
@@ -48,7 +59,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "7.0.4",
-    "jest": "27.4.4",
+    "jest": "^27.4.4",
     "lint-staged": "12.1.2",
     "prettier": "2.5.1",
     "pretty-quick": "^3.1.2",
@@ -56,7 +67,7 @@
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
     "semantic-release": "^18.0.1",
-    "ts-jest": "27.1.1",
+    "ts-jest": "^27.1.1",
     "typescript": "4.5.3"
   },
   "lint-staged": {
@@ -65,5 +76,22 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/themartiangeeks/nestjs-hasher"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "lib",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
