--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -33,3 +33,4 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
