--- a/.github/workflows/publisher.yml
+++ b/.github/workflows/publisher.yml
@@ -1,26 +1,17 @@
-name: PUBLISH PACKAGE
-
+name: Publish Package to npmjs
 on:
   release:
     types: [created]
-
 jobs:
   npm-publish:
-    name: npm-publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Publish if version has been updated
-        uses: pascalgn/npm-publish-action@1.3.8
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          tag_name: "v%s"
-          tag_message: "v%s"
-          create_tag: "true"
-          commit_pattern: "^Release (\\S+)"
-          workspace: "."
-          publish_command: "npm"
-          publish_args: "--non-interactive"
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
