--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,15 @@
 {
   "semanticCommits": true,
+  "patch": {
+    "appendLabels": ["automerge"],
+    "automerge": true
+  },
   "packageRules": [{
     "depTypeList": ["devDependencies"],
-    "automerge": true
+    "automerge": true,
+    "appendLabels": [
+      "dev-dependency"
+    ]
   }],
   "extends": [
     "config:base"
