--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,13 @@
 {
   "semanticCommits": true,
-  "packageRules": [{
-    "depTypeList": ["devDependencies"],
-    "automerge": true,
-    "appendLabels": [
-      "dev-dependency"
-    ]
-  }],
+  "packageRules": [
+    {
+      "depTypeList": ["devDependencies"],
+      "automerge": true,
+      "assignAutomerge": true,
+      "addLabels": ["dev-dependency"]
+    }
+  ],
   "extends": [
     "config:base"
   ]
