--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
     {
       "depTypeList": ["dependencies"],
       "groupName": "dependancies",
-      "addLabels": ["dependencies"],
+      "addLabels": ["dependencies"]
     },
     {
       "depTypeList": ["devDependencies"],
@@ -32,14 +32,14 @@
       "groupName": "eslint packages",
       "automerge": true,
       "automergeComment": "bors: r+ eslint",
-      "addLabels": ["styles"],
+      "addLabels": ["styles"]
     },
     {
       "matchPackagePrefixes": ["@types/"],
       "groupName": "@type packages",
       "automerge": true,
       "automergeComment": "bors: r+ @types",
-      "addLabels": ["@types"],
+      "addLabels": ["@types"]
     }
   ]
 }
